fix: color contrast

--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -29,7 +29,7 @@
 }
 
 .button {
-  background: var(--button);
+  background: var(--blue);
   border: none;
   border-radius: 0.25rem;
   box-shadow: 0 0 8px 0 rgba(17, 22, 26, 0.16),
